src/napka/src/client/map.css
/* Copyright (C) 2025  Niels Martignène <niels.martignene@protonmail.com>

   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <https://www.gnu.org/licenses/>. */

html { height: 100%; }
body {
    height: 100%;
    padding: 0;
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 15px;
    line-height: 1.5;
    display: flex;
    flex-direction: column;
    background: white;
}

a {
    cursor: pointer;
    color: var(--color, #05082e);
    text-decoration: underline;
}
a:hover { color: var(--color, #0d114a); }

.tag {
    display: inline-block;
    margin: 1px 0;
    padding: 1px 5px;
    border-radius: 4px;
    color: white;
    font-size: 0.9em;
    font-weight: bold;
    white-space: nowrap;
}

.sub {
    font-size: 0.8em;
    font-weight: normal;
    text-transform: none;
    font-variant: normal;
    color: var(--color, #888);
    vertical-align: 1px;
}

#menu {
    position: absolute;
    box-sizing: border-box;
    left: 0;
    top: 0;
    width: 100vw;
    display: flex;
    --background: white;
    background: var(--background, white);
    pointer-events: auto;
    cursor: default;
    z-index: 2;
}
#menu.admin {
    --background: black;
    color: white;
    --color: white;
}
#menu.admin > fielset { background: black; }
#menu.admin img { filter: invert(100%); }

#search { padding: 10px; }
#search > label {
    display: flex;
    gap: 10px;
}
#search > label > input {
    width: 300px;
    padding: 4px 6px;
}

#suggestions {
    position: absolute;
    margin-top: 6px;
    z-index: 9999;
    border: 1px solid #ddd;
}
#suggestions:not(:empty) {
    padding-top: 6px;
    background: var(--background, white);
    padding: 12px;
}
#suggestions > a {
    display: block;
    margin-top: 4px;
}

#filters {
    display: flex;
    padding: 0 10px;
}
#filters > fieldset {
    position: relative;
    padding: 0;
    border: 0;
    display: flex;
    justify-content: right;
}
#filters legend {
    font-weight: bold;
    padding: 12px;
}
#filters .toggle {
    margin-bottom: 8px;
    font-weight: normal;
    font-size: 0.8em;
    text-align: center;
}
#filters label {
    display: block;
    white-space: nowrap;
}
#filters label > img { vertical-align: middle; }
#filters .prec {
    padding-left: 24px;
    font-size: 0.9em;
    font-style: italic;
}
#filters > fieldset > div {
    display: none;
    position: absolute;
}
#filters > fieldset:hover legend { text-decoration: underline; }
#filters > fieldset:hover > div {
    display: flex;
    flex-direction: column;
    background: var(--background, white);
    padding: 12px;
    min-width: 160px;
}
#count {
    padding: 12px 20px 12px 0;
    text-align: center;
    filter: opacity(80%);
}

#map {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
}
#map_zoom {
    position: absolute;
    left: 10px;
    bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4px;
    font-size: 2em;
    z-index: 2;
}
#map_zoom > button {
    padding: 0 0.4em 0 0.4em;
    border-radius: 50%;
    color: black;
}
.map_box {
    position: absolute;
    padding: 3px 6px;
    border-radius: 2px;
    font-size: 0.9em;
    z-index: 2;
}
.map_box.attribution {
    right: 10px;
    bottom: 10px;
    background: #cdcdcdbb;
}
.map_box.error {
    right: 10px;
    bottom: 46px;
    background: #de0a0abb;
    --color: white;
}

.planning_tip {
    text-align: center;
    color: #999;
    font-size: 0.9em;
}
.planning {
    width: 80%;
    margin: 0 auto;
    border: 1px solid #ddd;
    border-collapse: collapse;
}
.planning tr.closed { color: #999; }
.planning tr:nth-child(2n) { background: #fefefe; }
.planning tr:nth-child(2n + 1) { background: #f8f8f8; }
.planning td {
    padding: 3px 5px;
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
}

#admin { padding: 10px; }
.iframe #admin { display: none; }

#log {
    position: fixed;
    left: calc(50% - 160px);
    top: calc(2.8em + 12px);
    z-index: 99999;
    width: 320px;
    user-select: none;
    -webkit-user-select: none;
}

#log > div {
    margin-bottom: 8px;
    padding: 8px;
    background: #373737;
    color: white;
    border-radius: 4px;
    box-shadow: 1px 1px #00000033;
    text-align: center;
    cursor: pointer;
}
@media (hover: hover) {
    #log > div:hover { filter: opacity(40%); }
}
#log > div.error { background: #db0a0a; }
#log > div.success { background: #2d8261; }

.log_close {
    float: right;
    padding: 2px 6px;
    background: none;
    border: 0;
    color: white;
    font-weight: bold;
}
.log_close:hover { background: none !important; }

/* Came from https://loading.io/css/ */
.log_spin {
    float: left;
    display: inline-block;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    margin: -1px 0 0 -1px;
}
.log_spin::after {
    content: ' ';
    display: block;
    width: 12px;
    height: 12px;
    margin: 1px;
    border-radius: 50%;
    border: 4px solid white;
    border-color: white transparent white transparent;
    animation: log_spin 0.8s ease-in-out infinite;
}
@keyframes log_spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

button {
    padding: 0.21em 0.71em 0.28em 0.71em;
    background: #76b35a;
    border: 1px solid #76b35a;
    border-radius: 3px;
    color: white;
    font-family: inherit;
    font-size: 1em;
    cursor: pointer;
}
button::-moz-focus-inner { border: 0; }
/* ... */

